css/main.css
/* ... */
nav.redes-sociales a:last-child {
  margin-right: 0;
}

@media only screen and (min-width:768px) {
  div.informacion-evento {
    width: 70%;
    margin: 0 auto;
  }
}

div.informacion-evento {
  text-align: center;
  color: #fff;
}

div.informacion-evento p {
  font-size: 20px;
  text-transform: uppercase;
}

div.informacion-evento p i {
  color: var(--primary-color);
  font-size: 2.4rem;
}

p.fecha {
  float: left;
}

p.ciudad {
  float: right;
  text-align: right;
}

h2 {
  font-family: var(--font-PTSans);
}

p.slogan {
  text-transform: none!important;
  margin-top: 50px;
}

p.slogan span {
  font-weight: bold;
}

h1.nombre-sitio {
  font-family: var(--font-oswald);
  text-transform: uppercase;
  font-family: 'PT Sans', sans-serif;
  font-size: 10vw;
  margin-top: 30px;
}

@media only screen and (min-width: 768px) {
  h1.nombre-sitio {
    font-size: 11.5vw;
    margin: 0;
    line-height: 1;
  }
}
/**Lettering */

h1.nombre-sitio span{
  position: relative;
  text-shadow: 0 0 30px black;

}

@media only screen and (min-width: 978px){
  .char1{
    top: 20px; right: 20px;
  }
  .char2{
    top: 0px; left: -20px;
  }
  .char3{
    top: 10px; right: 20px;
  }
  .char4{
    top: 5px; right: 10px;
  }
  .char5{
    top: 15px; right: 10px;
  }
  .char6{
    top: 5px; left: 10px;
  }
  .char7{
    top: 20px; left: -10px;
  }
  .char8{
    top: 0; left: 10px;
  }
  .char9{
    top: 10px; right: 20px;
  }
  .char10{
    top: 20px; right: 20px;
  }

}

/* NAVBAR */

div.site-nav {
  padding: 20px;
  background-color: var(--secondary-color);
}

h1.nombre-sitio#title-nav {
  font-size: 3.5vw;
}

/* Intentado hacer el stripe con ::before

h1.nombre-sitio#title-nav::before{
  content: "";

  background-color: var(--primary-color);
  padding: 0.1px 10px;
} */

.logo img {
  width: 80%;
  float: left;
}

@media only screen and (min-width: 980px) {
  .logo img {
    height: 20%;
    width: 33%;
    float: left;
  }
}

nav.navbar {
  display: none;
  width: 100%;
}

nav.navbar a {
  color: #fff;
  font-size: 2vw;
  font-family: var(--font-oswald);
  text-decoration: none;
  text-transform: uppercase;
  font-size: 1.3rem;
  transition: all .6s ease;
  width: 100%;
  text-align: center;
  display: inline-block;
  margin-bottom: 10px;
  padding: 20px;
}

nav.navbar a:first-child {
  margin-top: 10px;
}

nav.navbar a:last-child {
  border: 2px solid var(--primary-color);
  color: var(--primary-color);
  margin-right: 0;
}

nav.navbar a:last-child:hover {
  color: #fff;
}

nav.navbar a:hover {
  background-color: var(--primary-color);
}

@media only screen and (min-width: 990px) {
  nav.navbar {
    width: 67%;
    float: right;
    display: block;
    text-align: right;
  }
  nav.navbar a {
    padding: 10px 10px;
    width: auto;
    text-align: center;
    margin: 10px 10px 0 0;
  }
}

/**MOBILE MENU*/

div.mobile-menu {
  margin-top: 20px;
  float: right;
  text-align: right;
  display: block;
}

div.mobile-menu:hover {
  cursor: pointer;
}

@media only screen and (min-width: 980px) {
  div.mobile-menu {
    display: none;
  }
}

div.mobile-menu span {
  height: 10px;
  width: 60px;
  background-color: #fff;
  margin-bottom: 5px;
  display: block;
}

/* Seccion */

.seccion {
  padding: 30px 0;
}

.seccion p {
  font-size: 1.2rem;
  text-align: center;
}

h2::after {
  content: '';
  margin: 0 auto;
  background-image: url(../img/separador.png);
  background-repeat: no-repeat;
  height: 30px;
  width: 100px;
  display: block;
}

/* Programa del evento */

section.programa {
  position: relative;
}

div.contenedor-video {
  max-width: 100%;
  overflow-x: hidden;
}


@media only screen and (min-width: 92em) {
  div.contenedor-video video{
    width: 100%;
    max-height: 50%;
  }
}


div.contenido-programa {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

div.programa-evento {
  background-color: rgba(255, 255, 255, .8);
  padding: 15px;
  margin-top: 80px;
  position: relative;
}

@media only screen and (min-width: 768px) {
  div.programa-evento {
    width: 70%;
  }
}

@media only screen and (min-width: 992px) {
  div.programa-evento {
    width: 50%;
  }
}



nav.menu-programa {
  width: 100%;

}

@media only screen and (min-width: 768px) {
  nav.menu-programa {
    display: table;
  }
}

nav.menu-programa a {
  display: block;
  position: relative;
  text-align: center;
  color: #000000;
  text-decoration: none;
  font-family: var(--font-oswald);
  font-size: 1.5rem;
  border-bottom: 1px solid var(--primary-color);
  margin-bottom: 10px;
}



nav.menu-programa a.activo::after{
  content: '';
  position: absolute;
  right: 0;
  left: 0;
  bottom: -20px;
  margin-left: auto;
  margin-right: auto;
  height: 20px;
  width: 20px;
  background-image: url(../img/talleres-flecha.jpg);
  background-repeat: no-repeat;
  background-position: top center;
}


@media only screen and (min-width: 768px) {
  nav.menu-programa a {
    display: table-cell;
    border-spacing: 15px;
  }
}


nav.menu-programa a i, div.detalle-evento i {
  font-size: 1.6rem;
  margin-right: 10px;
  color: var(--primary-color);
}

/** detalle evento */

.info-curso.ocultar{
  display: none;
}

div.detalle-evento {
  margin-top: 20px;
  padding-bottom: 0 20px;
  border-bottom: 1px solid #000;

}

div.detalle-evento:nth-child(2) {
  border: none;
}

div.detalle-evento p {
  margin-bottom: 20px;
  font-size: 20px;
}



/** INVITADOS */

div.invitado {
  position: relative;
  overflow: hidden;
  margin-bottom: 1.4rem;
}

div.invitado img {
  width: 100%;
  filter: grayscale(1);
  transition: all .5s ease-in-out;
}

div.invitado :hover img {
  filter: grayscale(0);
  transform: scale(1.1);
  color: #000;
}
/* ... */

